make intro section responsive

--- a/styles/index.css
+++ b/styles/index.css
@@ -39,6 +39,7 @@
 }
 
 
+
 .lead__subtitle {
   max-width: 620px;
   margin: 0 auto 64px;
@@ -78,6 +79,20 @@
   margin: 0 auto 0;
 }
 
+@media screen and (max-width: 984px) {
+  .intro {
+    max-width: calc(100vw - 48px);
+    padding-top: 88px;
+  }
+}
+
+@media screen and (max-width: 656px) {
+  .intro {
+    padding-top: 64px;
+  }
+}
+
+
 .intro__title {
   font-weight: 900;
   font-size: 54px;
@@ -86,12 +101,26 @@
   margin-bottom: 40px;
 }
 
+@media screen and (max-width: 425px) {
+  .intro__title {
+    font-size: 32px;
+    line-height: 35px;
+  }
+}
+
 .intro__subtitle {
   font-weight: normal;
   font-size: 24px;
   line-height: 34px;
   max-width: 690px;
 }
+
+@media screen and (max-width: 425px) {
+  .intro__subtitle {
+    line-height: 30px;
+  }
+}
+
 
 .intro__text {
   margin: 32px 0;
@@ -129,6 +158,13 @@
   .photo-grid {
     gap: 16px;
     max-width: 720px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .photo-grid {
+    gap: 12px;
+    margin: 64px auto 0;
   }
 }
 
