--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -1,3 +1,13 @@
 .logo {
   align-self: flex-start;
+  max-width: 190px;
+  max-height: 44px;
+}
+
+
+@media screen and (max-width: 425px) {
+  .logo {
+    width: 156px;
+    height: 36px;
+  }
 }
