--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -17,3 +17,10 @@
   text-decoration-line: underline;
   opacity: .5;
 }
+
+@media screen and (max-width: 425px) {
+  .header__lang-link {
+    font-size: 18px;
+    line-height: 24px;
+  }
+}
