--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,9 +1,9 @@
 .lead__caption {
-  align-self: flex-start;
   font-weight: normal;
   font-size: 10px;
   line-height: 14px;
-  letter-spacing: .15;
+  letter-spacing: .15em;
   text-transform: uppercase;
-  margin: 8px 0 0;
+  margin-top: 8px;
+  align-self: flex-start;
 }
