--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,9 +1,16 @@
 .lead__title {
   max-width: 720px;
-  height: 200px;
   margin: 0 auto 32px;
   font-weight: 900;
   font-size: 96px;
   line-height: 100px;
   text-align: center;
+}
+
+@media screen and (max-width: 656px) {
+  .lead__title {
+    font-size: 40px;
+    line-height: 44px;
+    margin: 0 auto 16px;
+  }
 }
