--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,8 +1,27 @@
+@import url(./__title/lead__title.css);
+@import url(./__subtitle/lead__subtitle.css);
+@import url(./__image/lead__image.css);
+@import url(./__caption/lead__caption.css);
+
+
 .lead {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding-top: 58px;
   max-width: 984px;
-  margin: 0 auto;
+  margin: 0 auto 0;
+
+}
+
+@media screen and (max-width: 1140px) {
+  .lead {
+    max-width: calc(100vw - 96px);
+  }
+}
+
+@media screen and (max-width: 984px) {
+  .lead {
+    max-width: calc(100vw - 48px);
+  }
 }
