--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,8 +1,32 @@
+@import url(./__item/photo-grid__item.css);
+
 .photo-grid {
+  max-width: 1184px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
-  /* grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, 1fr); */
   gap: 16px;
   margin: 92px auto 0;
+}
+
+@media screen and (max-width: 1140px) {
+  .photo-grid {
+    gap: 14px;
+    max-width: calc(100vw - 96px);
+  }
+}
+
+@media screen and (max-width: 978px) {
+  .photo-grid {
+    gap: 16px;
+    max-width: calc(100vw - 48px);
+    margin: 88px auto 0;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .photo-grid {
+    gap: 12px;
+    max-width: calc(100vw - 32px);
+    margin: 64px auto 0;
+  }
 }
