--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,6 +1,7 @@
 .place__image {
   max-width: 460px;
-  max-height: 460px;
   grid-column: 1;
   grid-row: 2;
+  object-fit: cover;
+  width: 100%;
 }
