--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -7,3 +7,15 @@
   list-style: none;
   margin-bottom: 24px;
 }
+
+.place__paragraph:last-of-type {
+  margin-bottom: 0;
+}
+
+
+@media screen and (max-width: 958px) {
+  .place__paragraph {
+    font-size: 16px;
+    line-height: 26px;
+  }
+}
