--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -6,3 +6,16 @@
   line-height: 76px;
   margin-bottom: 48px
 }
+
+@media screen and (max-width: 958px) {
+  .place__title {
+    font-size: 42px;
+    line-height: 46px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .place__title {
+    margin-bottom: 32px ;
+  }
+}
