--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -2,6 +2,17 @@
   grid-row: 1/2;
   grid-column: 2;
   list-style: none;
-  align-self: end;
   margin-bottom: 48px;
+}
+
+@media screen and (min-width: 959px) {
+  .place__website {
+    align-self: end;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .place__website {
+    display: none;
+  }
 }
