--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,8 +1,36 @@
+@import url(./__title/place__title.css);
+@import url(./__website/place__website.css);
+@import url(./__url-heading/place__url-heading.css);
+@import url(./__link/place__link.css);
+@import url(./__image/place__image.css);
+@import url(./__paragraph/place__paragraph.css);
+
 .place {
   display: grid;
-  grid-template-columns: 460px 484px;
+  grid-template-columns: 1fr 1fr;
   grid-template-rows: auto;
   column-gap: 40px;
+}
 
-  /* row-gap: 48px; */
+@media screen and (max-width: 1140px) {
+  .place {
+    column-gap: 32px;
+  }
+}
+
+@media screen and (max-width: 958px) {
+  .place {
+    column-gap: 28px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .place {
+    display: flex;
+    flex-direction: column;
+    /* max-width: 984px;
+    min-height: 3452px;
+    margin: 92px auto 92px;
+    max-width: 320px; */
+  }
 }
