--- a/styles/temp.css
+++ b/styles/temp.css
@@ -1,153 +1,386 @@
+@import url(../vendor/fonts/fonts.css);
+@import url(../vendor/normalize.css);
 
-.cover__title {
-  font-weight: 900;
-  font-size: 72px;
-  line-height: 76px;
-  margin-bottom: 32px;
-  z-index: 1;
-}
+@import url(../blocks/page/page.css);
+@import url(../blocks/header/header.css);
+@import url(../blocks/logo/logo.css);
 
-.cover__subtitle {
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 22px;
-  text-align: center;
-  max-width: 320px;
-  z-index: 1;
-}
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/footer/footer.css);
 
 
 
 
-/* .cover__link {
-  min-height: 740px;
+.page__container {
   max-width: 1184px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.lead {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  background-image: url(../images/road.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  text-decoration: none;
-  color: #fff;
-  position: relative;
+  padding-top: 58px;
+  max-width: 984px;
+  margin: 0 auto 0;
 }
 
-.cover__link::after {
-  content: "";
+@media screen and (max-width: 1140px) {
+  .lead {
+    max-width: calc(100vw - 96px);
+  }
+}
+
+@media screen and (max-width: 984px) {
+  .lead {
+    max-width: calc(100vw - 48px);
+  }
+}
+
+.lead__title {
+  max-width: 720px;
+  margin: 0 auto 32px;
+  font-weight: 900;
+  font-size: 96px;
+  line-height: 100px;
+  text-align: center;
+}
+
+
+@media screen and (max-width: 656px) {
+  .lead__title {
+    font-size: 40px;
+    line-height: 44px;
+    margin: 0 auto 16px;
+  }
+}
+
+
+
+.lead__subtitle {
+  max-width: 620px;
+  margin: 0 auto 64px;
+  font-weight: normal;
+  font-size: 30px;
+  line-height: 36px;
+  text-align: center;
+}
+
+@media screen and (max-width: 1140px) {
+  .lead__subtitle {
+    margin: 0 auto 56px;
+  }
+}
+
+@media screen and (max-width: 656px) {
+  .lead__subtitle {
+    font-size: 16px;
+    line-height: 20px;
+    margin: 0 auto 40px;
+  }
+}
+
+.lead__image {
+  background-image: url(../images/mountains.jpg);
+  max-width: 984px;
   width: 100%;
-  height: 100%;
-  background: #2A2C2F;
-  opacity: .3;
-  position: absolute;
-  top: 0;
-  left: 0;
-  transition: .5s ease;
+  padding-bottom: 56.25%;
+  background-size: cover;
+  background-position: center;
 }
 
-.cover__link:hover::after {
-  background-color: #2A2C2F;
-  opacity: .8;
-} */
+@media screen and (max-width: 984px) {
+  .lead__image {
+    width: 115%;
+  }
+}
 
 
-/* .footer {
-  max-width: 1184px;
+.lead__caption {
+  font-weight: normal;
+  font-size: 10px;
+  line-height: 14px;
+  letter-spacing: .15em;
+  text-transform: uppercase;
+  margin-top: 8px;
+  align-self: flex-start;
+}
+
+.intro {
   display: flex;
-  justify-content: space-between;
-  margin: 92px auto 0;
-  padding: 0 0 24px;
-} */
-
-/* .footer__links {
-  list-style: none;
-  display: inline;
-  margin: 0 18px 0 0;
+  flex-direction: column;
+  align-items: flex-start;
+  max-width: 984px;
+  min-height: 568px;
+  padding-top: 92px;
+  margin: 0 auto 0;
 }
 
-.footer__links:last-of-type {
-  margin-right: 0;
-} */
+@media screen and (max-width: 1140px) {
+  .intro {
+    max-width: calc(100vw - 96px);
+  }
+}
 
-/* .footer__link {
-  color: #fff;
-  text-decoration: none;
+@media screen and (max-width: 984px) {
+  .intro {
+    max-width: calc(100vw - 48px);
+    padding-top: 88px;
+  }
+}
+
+@media screen and (max-width: 656px) {
+  .intro {
+    padding-top: 64px;
+  }
+}
+
+
+.intro__title {
+  font-weight: 900;
+  font-size: 54px;
+  line-height: 58px;
+  max-width: 690px;
+  margin-bottom: 40px;
+}
+
+@media screen and (max-width: 425px) {
+  .intro__title {
+    font-size: 32px;
+    line-height: 35px;
+  }
+}
+
+.intro__subtitle {
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 34px;
+  max-width: 690px;
+}
+
+@media screen and (max-width: 425px) {
+  .intro__subtitle {
+    line-height: 30px;
+  }
+}
+
+
+.intro__text {
+  margin: 32px 0;
   font-weight: normal;
   font-size: 16px;
+  line-height: 26px;
+  max-width: 690px;
+}
+
+.intro__list {
+  font-weight: normal;
+  font-size: 12px;
   line-height: 18px;
+  list-style: none;
+  max-width: 690px;
+}
+
+
+.photo-grid {
+  max-width: 1184px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
+  gap: 16px;
+  margin: 92px auto 0;
+}
+
+@media screen and (max-width: 1140px) {
+  .photo-grid {
+    gap: 14px;
+    max-width: calc(100vw - 96px);
+  }
+}
+
+@media screen and (max-width: 978px) {
+  .photo-grid {
+    gap: 16px;
+    max-width: calc(100vw - 48px);
+    margin: 88px auto 0;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .photo-grid {
+    gap: 12px;
+    max-width: calc(100vw - 32px);
+    margin: 64px auto 0;
+  }
+}
+
+.photo-grid__item {
+   width: 100%;
+}
+
+.places {
+  display: grid;
+  grid-row: 5;
+  row-gap: 80px;
+  max-width: 984px;
+  min-height: 3452px;
+  margin: 92px auto 92px;
+}
+
+
+@media screen and (max-width: 1024px) {
+  .places {
+    max-width: calc(100vw - 96px);
+  }
+}
+
+
+
+@media screen and (max-width: 768px) {
+  .places {
+    max-width: calc(100vw - 48px);
+    row-gap: 70px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .places {
+    max-width: calc(100vw);
+  }
+}
+
+
+.place {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto;
+  column-gap: 40px;
+
+}
+
+@media screen and (max-width: 1140px) {
+  .place {
+    column-gap: 32px;
+  }
+}
+
+@media screen and (max-width: 958px) {
+  .place {
+    column-gap: 28px;
+  }
+}
+
+
+/* @media screen and (max-width: 656px) {
+  .place {
+    column-gap: 28px;
+  }
+} */
+
+
+@media screen and (max-width: 425px) {
+  .place {
+    display: flex;
+    flex-direction: column;
+    /* max-width: 984px;
+    min-height: 3452px;
+    margin: 92px auto 92px;
+
+    max-width: 320px; */
+  }
+}
+
+
+.place__title {
+  grid-row: 1/2;
+  grid-column: 1;
+  font-weight: 900;
+  font-size: 72px;
+  line-height: 76px;
+  margin-bottom: 48px
+}
+
+@media screen and (max-width: 958px) {
+  .place__title {
+    font-size: 42px;
+    line-height: 46px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .place__title {
+    margin-bottom: 32px ;
+  }
+}
+
+.place__website {
+  grid-row: 1/2;
+  grid-column: 2;
+  list-style: none;
+  margin-bottom: 48px;
+}
+
+@media screen and (min-width: 959px) {
+  .place__website {
+    align-self: end;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .place__website {
+    display: none;
+  }
+}
+
+.place__url-heading {
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 20px;
+  letter-spacing: .2;
+  color: #AAAAAA;
+}
+
+
+
+.place__link {
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 22px;
+  text-decoration-line: underline;
+  color: #fff;
   transition: ease .5s;
 }
 
-.footer__link:hover {
+.place__link:hover {
   opacity: .5;
 }
 
-.footer__copyright {
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 16px;
-  margin: 0;
-} */
+.place__image {
+  max-width: 460px;
+  grid-column: 1;
+  grid-row: 2;
+  object-fit: cover;
+  width: 100%;
+}
 
-/*
-@media screen and (max-width: 1140px) {
-  .cover__link {
-    min-height: 640px;
-  }
+.place__paragraph {
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 30px;
+  grid-column: 2;
+  grid-row: 2;
+  list-style: none;
+  margin-bottom: 24px;
+}
+
+.place__paragraph:last-of-type {
+  margin-bottom: 0;
 }
 
 
 @media screen and (max-width: 958px) {
-  .cover__link {
-    min-height: 480px;
+  .place__paragraph {
+    font-size: 16px;
+    line-height: 26px;
   }
-} */
-/*
-@media screen and (max-width: 656px) {
-  .footer {
-    margin: 88px 24px 0;
-  }
-} */
-
-
-/* @media screen and (max-width: 425px) {
-  .cover__link {
-    min-height: 200px;
-  }
-
-  .cover__title {
-    font-size: 32px;
-    line-height: 35px;
-  }
-
-  .cover__subtitle {
-    font-size: 14px;
-    line-height: 16px;
-  }
-
-  .footer {
-    margin: 64px 0 0 16px;
-    flex-direction: column;
-  }
-
-  .footer__links {
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    padding-bottom: 32px;
-    font-size: 24px;
-    line-height: 24px;
-  }
-
-  .footer__links:last-of-type {
-    padding-bottom: 0px;
-  }
-
-  .footer__copyright {
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 14px;
-    margin-top: 48px;
-  }
-} */
+}
