place__paragraph update for small screens

--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -19,3 +19,13 @@
     line-height: 26px;
   }
 }
+
+@media screen and (max-width: 425px) {
+  .place__paragraph {
+    margin-left: 8px;
+    margin-right: 8px;
+  }
+  .place__paragraph:first-of-type {
+    margin-top: 32px;
+  }
+}
