--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -12,6 +12,7 @@
   text-decoration: none;
   color: #fff;
   position: relative;
+  z-index: 1;
 }
 
 .cover__link::after {
@@ -24,6 +25,7 @@
   top: 0;
   left: 0;
   transition: .5s ease;
+  z-index: -1;
 }
 
 .cover__link:hover::after {
