--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,3 +1,5 @@
+@import url(./_selected/header__lang-link_selected.css);
+
 .header__lang-link {
   font-style: normal;
   font-weight: normal;
@@ -5,16 +7,12 @@
   line-height: 28px;
   color: #fff;
   transition: ease .5s;
-}
-
-.header__lang-link:nth-of-type(2) {
-  margin-left: 18px;
   text-decoration-line: none;
+  padding-left: 18px;
 }
 
 
 .header__lang-link:hover {
-  text-decoration-line: underline;
   opacity: .5;
 }
 
