--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -17,5 +17,8 @@
 @media screen and (max-width: 425px) {
   .place__title {
     margin-bottom: 32px ;
+    margin-left: 16px;
+    font-size: 32px;
+    line-height: 35px;
   }
 }
