correct margins for intro and lead sections at the small viewport

--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -25,3 +25,9 @@
     max-width: calc(100vw - 48px);
   }
 }
+
+@media screen and (max-width: 425px) {
+  .lead {
+    max-width: calc(100vw - 32px);
+  }
+}
